@@ -1,10 +1,10 @@
 
-shootVideo <- function(filename,
-                       wd=paste0(gsub("[.]xml$", "", filename), "-video"),
-                       TTS=espeakTTS(),
-                       validate=TRUE,
-                       clean=FALSE) {
+shootVideo <- function(world, ...) {
+    UseMethod("shootVideo")
+}
 
+shootVideo.DirectorRealWorld <- function(world,
+                                         filename, wd, TTS, validate, clean) {
     if (clean) {
         ## Clear working directory
         if (dir.exists(wd)) {
@@ -25,4 +25,13 @@ shootVideo <- function(filename,
     wrap <- recordAction(script, shotLength, script$setting, wd)
     exitStage(wrap$script$stage$set, wrap$script$setting)
     muxAudioVideo(wrap$script, paddedAudioFiles, wrap$videoFiles, wd)
+}
+
+makeMovie <- function(filename,
+                      wd=paste0(gsub("[.]xml$", "", filename), "-movie"),
+                      TTS=espeakTTS(),
+                      world=realWorld,
+                      validate=TRUE,
+                      clean=FALSE) {
+    shootVideo(world, filename, wd, TTS, validate, clean)
 }
