@@ -18,5 +18,11 @@
     be shot, plus add \code{setting()} function to allow user to
     define a setting, plus add \code{localLinuxSetting()} function
     to define a local Linux context.
+
+    \item Change \code{shootVideo} to \code{makeMovie} and add a
+    \code{world} argument to describe the world within which the
+    movie will be shot.  Default is \code{realWorld},
+    but \code{dockerWorld()} can be used to shoot video within
+    Docker container.
   }
 }
